# services-router

./: .gitlab-ci.yml  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/services/: router.py
src/nagare/services/: router.py
