[metadata]
name = nagare-services-router
author = Net-ng
author_email = alain.poirier@net-ng.com
description = REST urls router service
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services-router
    Tracker = https://github.com/nagareproject/services-router/issues

[options]
zip_safe = False
packages = find:
install_requires =
    webob
    routes
    nagare-services

[options.entry_points]
nagare.services =
    router = nagare.services.router:Router

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
